fixing yet another image

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Lucy Rubin's Homepage</title>
+        <h1>Lucy Rubin's Homepage<br></h1>  
     </head>
     <body>
-      <h1>Lucy Rubin's Portfolio Page</h1>  
+      <h1>About Lucy Rubin</h1>
+      <a href="about.html"> About Page</a>
     </body>
 
 </html>
