--- a/about.html
+++ b/about.html
@@ -5,7 +5,10 @@
         <h1>About Lucy Rubin</h1>  
     </head>
     <body>
-      
+        <hr><h2>Back to the Homepage</h2>
+        <a href="index.html"> Homepage</a>
+    <br><br><p>This is my about page! It will contain different info about me. 
+    I will complete this page more as I continue in my coding journey.</p>
     </body>
 
 </html>
