--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="style2.css" type="text/css" rel="stylesheet">
         <title>About Lucy Rubin</title>
         <h1>About Lucy Rubin</h1>  
     </head>
     <body>
         <hr><h2>Back to the Homepage</h2>
+        <div>
         <a href="index.html"> Homepage</a>
     <br><br><p>This is my about page! It will contain different info about me. 
     I will complete this page more as I continue in my coding journey.</p>
-    </body>
-
+       </div>
+</body>
 </html>
