--- a/about.html
+++ b/about.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="style2.css" type="text/css" rel="stylesheet">
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="#"><h1>About Lucy Rubin</h1><a href="index.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Homepage</a><a href="testingBootstrap.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Tester Page</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            </nav>
         <title>About Lucy Rubin</title>
-        <h1>About Lucy Rubin</h1>  
+        
     </head>
     <body>
-        <hr><h2>Back to the Homepage</h2>
         <div>
-        <a href="index.html"> Homepage</a>
+        <img src="IMG/IMG_3917.jpeg" length=200 width=200>  
     <br><br><p>This is my about page! It will contain different info about me. 
     I will complete this page more as I continue in my coding journey.</p>
-       </div>
+    </div>
 </body>
 </html>
